--- a/LinkedDataFragments/.classpath
+++ b/LinkedDataFragments/.classpath
@@ -3,5 +3,6 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry excluding="src/" kind="src" path=""/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
+	<classpathentry kind="lib" path="/home/sitraka/Documents/M1ALMA/Researches/NashornLib-1.9.4-1.8.77-1.2.2.6.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
